# wzed

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  PKGBUILD  README.md  REVIEW.md  build.rs  clippy.toml  plan-2026-06-12.md  problems.md  test-step.md  test.md  wzed.md
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
specs/001-windows-support/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-windows-support/checklists/: requirements.md
specs/002-fix-code-quality/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-code-quality/checklists/: requirements.md
specs/002-fix-code-quality/contracts/: error-handling.md
specs/003-remove-menubar/: plan.md  quickstart.md  spec.md  tasks.md
specs/003-remove-menubar/checklists/: requirements.md
specs/004-fix-encoding-switch/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-fix-encoding-switch/checklists/: requirements.md
specs/005-fix-file-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-fix-file-management/checklists/: requirements.md
specs/005-fix-file-management/contracts/: ipc-dispatch-contract.md  save-path-contract.md
src/: app_theme.rs  command_center.rs  diff_view.rs  encoding.rs  file_watcher.rs  ipc.rs  main.rs  recent_files.rs  search.rs  tab.rs  tab_groups.rs  topbar.rs  utils.rs  workspace.rs
