[package]
name = "wzed"
version = "0.1.1"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
editor = { workspace = true }
multi_buffer = { workspace = true }
language = { workspace = true }
language_core = { workspace = true }
grammars = { workspace = true, features = ["load-grammars"] }
theme = { workspace = true }
theme_settings = { workspace = true }
settings = { workspace = true }
assets = { workspace = true }
text = { workspace = true }
gpui = { workspace = true }
fs = { workspace = true }
clock = { workspace = true }
util = { workspace = true }
collections = { workspace = true }
regex = "1"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
chardetng = "0.1"
encoding_rs = "0.8"
similar = "2"
chrono = "0.4"
futures = "0.3"

[target.'cfg(unix)'.dependencies]
# Wayland-only: gpui_linux's default features pull in both `wayland` and `x11`,
# and the `x11` backend drags in libxcb / libxkbcommon-x11. We never target X11,
# so drop the defaults and enable just `wayland`.
gpui_linux = { workspace = true, default-features = false, features = ["wayland"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
image = "0.25"

[target.'cfg(windows)'.dependencies]
gpui_windows = { workspace = true }

[build-dependencies]
image = "0.25"

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[workspace.dependencies]
# Zed crates are sourced from the zed-industries/zed GitHub repo at a pinned rev.
# To update, change `rev` here once — every crate below resolves to the same checkout.
editor = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01" }
multi_buffer = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01" }
language = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01" }
language_core = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01" }
grammars = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01" }
theme = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01" }
theme_settings = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01" }
settings = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01" }
assets = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01" }
text = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01" }
gpui = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01" }
fs = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01" }
clock = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01" }
util = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01" }
collections = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01" }
gpui_linux = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01", default-features = false }
gpui_windows = { git = "https://github.com/zed-industries/zed", rev = "4ce18741ad2ea007cb20a1dd96d2a170d224cc01" }

# Release binary-size optimization. wzed pulls in Zed's editor/project crates
# (statically linked), so the default release profile leaves ~140 MiB on disk.
# These four knobs are the standard Rust size reduction with no behavior change:
#   - lto = "fat": rustc-to-rustc LTO across the whole crate graph (NOT the
#     GCC -flto that broke the bundled libgit2-sys under makepkg — this is pure
#     LLVM, so the earlier link error does not recur).
#   - codegen-units = 1: let LLVM see the whole binary at once for better dead-
#     code elimination, at the cost of slower link time.
#   - strip = true: drop debug symbols and symbol tables (shrinkwrap-only; the
#     binary still works, panics still print file:line).
#   - panic = "abort": skip the unwind tables. Verified safe — neither wzed nor
#     gpui's non-test paths use catch_unwind.
[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
